--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-todo [todoData]="todoData1"></app-todo>
-<app-todo [todoData]="todoData2"></app-todo>
+<app-todo [todoData]="todoData1" (onClickIcon)="getTodoInfo($event)"></app-todo>
+<app-todo [todoData]="todoData2" (onClickIcon)="getTodoInfo($event)"></app-todo>
